# ktools

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  icon.kra  icon.kra~  tree.txt
.cargo/: config.toml
games/neptunus/: Cargo.toml  README.md
games/neptunus/src/: assets.rs  context.rs  game.rs  main.rs  rl_misc.rs  settings.rs
gui/compa/: Cargo.toml  Dioxus.toml
ipconfig/: Cargo.toml
ipconfig/src/: adapter.rs  computer.rs
src/: base.rs  download.rs  homescreen.rs  main.rs  message.rs  panic_handler.rs  tool.rs  window.rs
src/tool/: application.rs  cmd.rs  ext_ip.rs  home.rs  netinfo.rs  passgen.rs  ping.rs  settings.rs  sys_info.rs
src/tool/sys_info/: mod.rs  process.rs  system_value.rs  tasks.rs
src/ui/: messagebox.rs  mod.rs  sidebar.rs  text.rs
