[package]
name = "ktools"
version = "2.0.0"
authors = ["Kian Heitkamp"]
license = "GPL-3.0"
description = "App that makes getting system information easy"
repository = "https://github.com/kderef/ktools"
edition = "2024"
build = "build.rs"

# Embedded in windows exe
[package.metadata.winres]
LegalCopyright = "Copyright © 2026 Kian Heitkamp"
FileDescription = "App that makes getting system information easy"


[features]
default = []
nocon = [] # no console window, useful for testing

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[build-dependencies]
ico = "0.5.0" # for baking the ICO data at build-time

[target.x86_64-pc-windows-msvc.build-dependencies]
winres = "0.1.12"
static_vcruntime = "3.0.0"
winapi = {version = "0.3.9", features = ["winnt"]}

[dependencies]
iced_aw = "0.14.1"
iced_fonts = { version = "0.3.0", features = ["codicon"] }
rand = "0.10.1"
sysinfo = "0.39.2"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"
ipconfig = {path = "ipconfig"}
open = "5.3.5"
minreq = { version = "2.14.1", features = ["https-native"] }
fuzzy-matcher = "0.3.7"

[target.'cfg(windows)'.dependencies]
windows = {
  version = "0.62.2",
  features = [
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
  ]
}

# We disable wgpu to use only tiny-skia, since it saves ~5MB on the EXE and has faster startup
[dependencies.iced]
version = "0.14.0"
default-features = false
features = [
  # "wgpu",
  "tiny-skia",
  "crisp",
  # "hinting",
  "web-colors",
  "thread-pool",
  "linux-theme-detection",
  "x11",
  "wayland",
  "image-without-codecs"
]
